fix: 복합키를 List.of 대신 Arrays.asList로 만들어 null NPE 방지
이전 fix가 문자열 결합 복합키를 List.of(...)로 바꾸며 충돌은 없앴지만,
List.of는 null 원소에서 NPE를 던진다. checkDuplicates/classify가
validateXxxRow(필수값 검증)보다 먼저 실행되므로, 필수값이 빈 행(예:
CodeRow의 cId=null)이 올라오면 오류 ① 안전망이 잡기도 전에 planner가
미처리 NPE로 죽어 호출자에게 500이 나가는 회귀가 생겼다.

Arrays.asList는 null 원소를 허용하면서도 List.of와 동일하게 원소 단위
equals/hashCode를 쓰므로(AbstractList 계약), 구분자 충돌 방지 효과는
그대로 유지하면서 null 안전성만 회복한다.